--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,13 @@
 @import url(./reset.css);
 
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2rem;
+}
+
 header{
     background-color: var(--color-secondary-bg);
     height: 5rem;
@@ -9,19 +17,31 @@ header{
 }
 
 nav{
-    margin-right: 2rem;
+    margin-right: 1rem;
 }
 
 nav ul{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+nav li{
     padding: .5rem;
     background-color: var(--color-secondary-bg);
-    filter: brightness(70%);
     text-align: center;
     border-radius: .5rem;
+    filter: brightness(70%);
 }
 
 
 /* main */
+button{
+    background-color: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
 
 section{
     margin-left: auto;
@@ -30,5 +50,29 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    form{
+        width: 50rem;
+        margin-top: 3rem;
+        text-align: right;
+        display: grid;
+        grid-template-columns: 20rem 1fr;
+        gap: .7rem;
+        background-color: var(--color-primary-bg);
+        filter: brightness(90%);
+        padding: 4rem 4rem 4rem 1rem;
+        border-radius: .5rem;
+
+        button{
+            grid-column: span 2;
+            justify-self: center;
+            padding: 1rem;
+            background-color: var(--color-secondary-bg);
+            border-radius: 1rem;
+        }
+    }
+
+
+
 }
 
