--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 html {
     font-size: 62.5%; /* 1rem = 10px (pour une meilleure gestion des rem) */
 }
