--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,9 @@ nav ul{
 
 nav li{
     padding: .5rem;
-    background-color: var(--color-secondary-bg);
+    background-color: var(--color-primary-bg);
     text-align: center;
     border-radius: .5rem;
-    filter: brightness(70%);
 }
 
 
@@ -59,8 +58,7 @@ section{
         display: grid;
         grid-template-columns: 20rem 1fr;
         gap: .7rem;
-        background-color: var(--color-primary-bg);
-        filter: brightness(90%);
+        background-color: var(--color-secondary-bg);
         padding: 4rem 4rem 4rem 1rem;
         border-radius: .5rem;
 
@@ -68,12 +66,16 @@ section{
             grid-column: span 2;
             justify-self: center;
             padding: 1rem;
-            background-color: var(--color-secondary-bg);
+            background-color: var(--color-primary-bg);
             border-radius: 1rem;
         }
     }
 
 
 
+}
+
+.nom_utilisateur{
+    font-family: "Aguafina Script", cursive;
 }
 
