--- a/css/reset.css
+++ b/css/reset.css
@@ -1,13 +1,12 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Aguafina+Script&family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 html {
     font-size: 62.5%; /* 1rem = 10px (pour une meilleure gestion des rem) */
 }
 
 body{
-    font-size: 1.6rem; /* 16px par défaut pour le texte principal */
-    font-family: "Playfair Display", serif;
+    font: 1.6rem "Caudex", serif;
     display: grid;
     grid-template-rows: auto 1fr auto;
     background-color: var(--color-primary-bg);
@@ -24,6 +23,10 @@ h1, h2, h3, h4, h5, h6, p, ol, ul, figure, blockquote, dl, dd, nav{
     list-style-type: none;
 }
 
+h1, h2, h3, h4, h5, h6{
+    font-family: "Abril Fatface", serif;
+}
+
 a, ul, li {
     text-decoration: none;
     color: inherit;
@@ -35,6 +38,7 @@ img{
     max-width: 100%;
     display: inline-block;
 }
+
 
 :root{
     --text-color : #000000; 
