indication dans le cas ou le mdp de confirmation n'est pas correcte et correction des imgs des collaborateur

--- a/resources/css/liste.css
+++ b/resources/css/liste.css
@@ -15,9 +15,12 @@ figcaption{
     align-items: center;
 }
 
-figcaption>img{
+figcaption > img {
     width: 15rem;
     height: 15rem;
+    max-width: 15rem;
+    max-height: 15rem;
+    object-fit: cover;
     padding: 2rem;
     border-radius: .5rem;
     place-self: center;
